Move cmake modules to common folder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project (7kaa)
 
 set (CMAKE_BUILD_TYPE Debug)
 
+set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules)
+find_package (SDL2)
+find_package (SDL2_image)
+
 add_subdirectory (01_SDL_hello)
