add terrain generation example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,4 @@ find_package (SDL2_image)
 add_subdirectory (01_SDL_hello)
 add_subdirectory (02_Main_cursor)
 add_subdirectory (03_Map_terrain)
+add_subdirectory (04_Map_generate)
